fixed alignment issues

--- a/css/main.css
+++ b/css/main.css
@@ -165,7 +165,7 @@ body * {
     max-width: 100px;
     max-height: 100px;
     margin-right:;
-    margin-left:42%;
+    margin-left:40%;
     border-radius: 100%;
     border:1.5px gray dashed;
 
